--- a/ui/ui-text/ui-text.css
+++ b/ui/ui-text/ui-text.css
@@ -1,15 +1,9 @@
 ui-text{
-  line-height:1.5;
-  width:100%;}
+  line-height:var(--ui-line-height-150);
+  width:100%;
 
-ui-text[text-align="start"]{
-  text-align:start;}
-
-ui-text[text-align="end"]{
-  text-align:end;}
-
-ui-text[text-align="center"]{
-  text-align:center;}
-
-ui-text[text-align="justify"]{
-  text-align:justify;}
+  &[text-align="start"]{text-align:start;}
+  &[text-align="end"]{text-align:end;}
+  &[text-align="center"]{text-align:center;}
+  &[text-align="justify"]{text-align:justify;}
+}
